2005-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in, foomatic-gswrapper.in: Fix for the fix on the
	  regexp for reading the config file (Thanks to Hans-Dieter Kosch,
	  hdkosch at t-online dot de, for this fix).

2005-07-18  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: In quiet mode (non-logging mode) $logh is
	  closed in the beginning but was never opened (Thanks to
	  Hans-Dieter Kosch, hdkosch at t-online dot de, for this fix).

	* foomatic-gswrapper.in: Fixed quoting of single quotes (Thanks to
	  Hans-Dieter Kosch, hdkosch at t-online dot de, for this fix).

	* foomatic-rip.in, foomatic-gswrapper.in: Fixed regexp for reading
	  the config file (Thanks to Hans-Dieter Kosch, hdkosch at
	  t-online dot de, for this fix).

2005-05-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Make EPSF files not be an exception when
	  checking whether the input file is DSC-conforming. They can also
	  be DSC-conforming (thanks to Kevin ODonovan, kevin dot odonovan
	  at nist dot gov, for his report); Let the "FontPath" defined in
	  /etc/cups/cupsd.conf being used when CUPS is the spooler
	  (thanks to Peter Kekesi, kekpeti at freemail dot hu, for his
	  report).

2005-05-11  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Added comment before the line to automatically
	  quote unquoted slashes in the allowed characters list or allowed
	  regexp.

2004-12-20  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug of foomatic-rip replacing a JCL
	  command (ex: "@PJL HOLDKEY=1234") if another which is contained
	  in the first one is supplied (ex: "@PJL HOLD=STORE"). Thanks to
	  Jociel Cavalcante Andrade (jcainfo at inf dot ufes dot br) for
	  reporting the bug and testing the fix.

2004-12-04  Chris Lawrence <lawrencc@debian.org>

	* foomatic-rip.in: Include -*- perl -*- for Emacs mode selection.

	* foomatic-gswrapper.in: Instead of testing for /dev/fd/*, use